--- a/washington-heights-dining-table/mojahedin_khomeini/index.html
+++ b/washington-heights-dining-table/mojahedin_khomeini/index.html
@@ -128,27 +128,27 @@
             margin-top: 0;
             margin-bottom: 0;
 
-        }
-        .footnotes {
-            margin-top: 40px;
-            border-top: 2px solid #AE3179;
-            padding-top: 10px;
-            font-family: 'Garamond', serif;
-            width: 720px;
-            color: #AE3179;
-        }
-        .footnote {
-            font-size: 0.9em;
-        }
-        .footnote a {
-            text-decoration: none;
-            color: #84D6DD;
-        }
-        .footnote a:hover {
-            text-decoration: underline;
-            color: #E7EFC1;
-            text-shadow: 1.5px 1.5px #84D6DD;
-        }
+          }
+          .footnotes {
+              margin-top: 40px;
+              border-top: 2px solid #AE3179;
+              padding-top: 10px;
+              font-family: 'Garamond', serif;
+              width: 720px;
+              color: #AE3179;
+          }
+          .footnote {
+              font-size: 0.9em;
+          }
+          .footnote a {
+              text-decoration: none;
+              color: #84D6DD;
+          }
+          .footnote a:hover {
+              text-decoration: underline;
+              color: #E7EFC1;
+              text-shadow: 1.5px 1.5px #84D6DD;
+          }
     </style>
   </head>
   <body>
@@ -310,7 +310,211 @@
         </div>
         <div class="footnotes">
             <p class="footnote" id="footnote-1">
-                <sup>c1</sup>
+                <sup>c1</sup> Morteza Gharehbaghian, "Oil Revenue and the Militarisation of Iran: 1960-1978," <i>Social Scientist</i> 15, no. 6 (1987): 88.
                 <a href="#ref-1">↩ (back to reading)</a>
             </p>
-        </div>
+            <p class="footnote" id="footnote-2">
+                <sup>c2</sup> Charles Kurzman, “The Qum Protests and the Coming of the Iranian Revolution, 1975 and 1978,” <i>Social Science History</i> 27, no. 3 (2003): 287–325, <a href="https://doi.org/10.1215/01455532-27-3-287.">https://doi.org/10.1215/01455532-27-3-287.</a>
+                <a href="#ref-2">↩</a>
+            </p>
+            <p class="footnote" id="footnote-3">
+                <sup>c3</sup> Charles Kurzman. <i>The Unthinkable Revolution in Iran.</i> (Harvard University Press, 2004), 4.
+                <a href="#ref-3">↩</a>
+            </p>
+            <p class="footnote" id="footnote-4">
+                <sup>c4</sup> Ibid., 169.
+                <a href="#ref-4">↩</a>
+            </p>
+            <p class="footnote" id="footnote-5">
+                <sup>c5</sup> Michel Foucault, <i>The Archaeology of Knowledge and the Discourse on Language</i> (New York: Vintage, 1982).
+                <a href="#ref-5">↩</a>
+            </p>
+            <p class="footnote" id="footnote-6">
+                <sup>n1</sup> Hereafter, simply the Mojahedin.
+                <a href="#ref-6">↩</a>
+            </p>
+            <p class="footnote" id="footnote-7">
+                <sup>c6</sup> Baqer Moin, <i>Khomeini, Life of an Ayatollah</i> (New York: St. Martin's Press, 2000), 71-95.
+                <a href="#ref-7">↩</a>
+            </p>
+            <p class="footnote" id="footnote-8">
+                <sup>c7</sup> Ervand Abrahamian, <i>The Iranian Mojahedin: Organization and Ideology</i> (New Haven: Yale University Press, 1989), 1.
+                <a href="#ref-8">↩</a>
+            </p>
+            <p class="footnote" id="footnote-9">
+                <sup>c8</sup> Ibid., 81.
+                <a href="#ref-9">↩</a>
+            </p>
+            <p class="footnote" id="footnote-10">
+                <sup>c9</sup> Ibid., 84.
+                <a href="#ref-10">↩</a>
+            </p>
+            <p class="footnote" id="footnote-11">
+                <sup>c10</sup> Ibid., 1.
+                <a href="#ref-11">↩</a>
+            </p>
+            <p class="footnote" id="footnote-12">
+                <sup>n2</sup> I don’t mean to imply a categorical rejection of explanation-based methodologies: the purpose of this paper is just to think outside of that structural frame and engage in a different type of knowledge production. While I look to stay grounded in the agency of people in this particular place and time, the kind of portrait that I hope to provide of these discourses could be synthesized with a structural approach that reads 1979 as a particular instance of revolution as a typology. Furet’s interpretation of revolution as a particular mode of historical action driven by discursive processes (<i>Interpreting the French Revolution</i> [Cambridge University Press, 1981]) is a perfect example of a more explanatory/structural approach that could be taken up in conversation with my work here.
+                <a href="#ref-12">↩</a>
+            </p>
+            <p class="footnote" id="footnote-13">
+                <sup>c11</sup> Robert Steele, “Crowning the ‘Sun of the Aryans”: Mohammad Reza Shah's Coronation and Monarchical Spectacle in Pahlavi Iran," <i>International Journal of Middle East Studies</i> 53, no. 2 (2021): 175–178.
+                <a href="#ref-13">↩</a>
+            </p>
+            <p class="footnote" id="footnote-14">
+                <sup>c12</sup> Ali M. Ansari, “The Myth of the White Revolution: Mohammad Reza Shah, ‘Modernization’ and the Consolidation of Power,” <i>Middle Eastern Studies</i> 37, no. 3 (2001): 3.
+                <a href="#ref-14">↩</a>
+            </p>
+            <p class="footnote" id="footnote-15">
+                <sup>c13</sup> British Foreign Office, <i>Political Affairs: Persia/Iran</i>, FO 371/164186, EP 1015/135, November 17, 1962, The National Archives, Kew, London.
+                <a href="#ref-15">↩</a>
+            </p>
+            <p class="footnote" id="footnote-16">
+                <sup>c14</sup> Ansari, 3.
+                <a href="#ref-16">↩</a>
+            </p>
+            <p class="footnote" id="footnote-17">
+                <sup>c15</sup> Ibid., 8, 12.
+                <a href="#ref-17">↩</a>
+            </p>
+            <p class="footnote" id="footnote-18">
+                <sup>c16</sup> Ibid., 7.
+                <a href="#ref-18">↩</a>
+            </p>
+            <p class="footnote" id="footnote-19">
+                <sup>c17</sup> Ibid., 3.
+                <a href="#ref-19">↩</a>
+            </p>
+            <p class="footnote" id="footnote-20">
+                <sup>c18</sup>  Ruhollah Khomeini, “The Afternoon of 'Ashura, June 3, 1963,” in <i>Islam and Revolution: Writings and Declarations of Imam Khomeini</i>, trans. and annotated by Hamid Algar (Berkeley, CA: Mizan Press, 1981), 171.
+                <a href="#ref-20">↩</a>
+            </p>
+            <p class="footnote" id="footnote-21">
+                <sup>c19</sup> Baqer Moin, 111-113.
+                <a href="#ref-21">↩</a>
+            </p>
+            <p class="footnote" id="footnote-22">
+                <sup>c20</sup> Ruhollah Khomeini, "New Year's Message” in <i>Islam and Revolution: Writings and Declarations of Imam Khomeini</i>, trans. and annotated by Hamid Algar (Berkeley, CA: Mizan Press, 1981), 281.
+                <a href="#ref-22">↩</a>
+            </p>
+            <p class="footnote" id="footnote-23">
+                <sup>c21</sup> Ruhollah Khomeini, "Islamic Governance," in <i>Islam and Revolution: Writings and Declarations of Imam Khomeini</i>, trans. and annotated by Hamid Algar (Berkeley, CA: Mizan Press, 1981), 26.
+                <a href="#ref-23">↩</a>
+            </p>
+            <p class="footnote" id="footnote-24">
+                <sup>n3</sup> Khomeini doesn’t give particular examples of what this is, but associates it with mass media and the university system. See footnote below.
+                <a href="#ref-24">↩</a>
+            </p>
+            <p class="footnote" id="footnote-25">
+                <sup>c22</sup> Ruhollah Khomeini, “New Year’s Message,” 290-291.
+                <a href="#ref-25">↩</a>
+            </p>
+            <p class="footnote" id="footnote-26">
+                <sup>c23</sup> Ibid., 39.
+                <a href="#ref-26">↩</a>
+            </p>
+            <p class="footnote" id="footnote-27">
+                <sup>c24</sup> Ibid., 28.
+                <a href="#ref-27">↩</a>
+            </p>
+            <p class="footnote" id="footnote-28">
+                <sup>c25</sup> Ibid., 37. Original emphasis.
+                <a href="#ref-28">↩</a>
+            </p>
+            <p class="footnote" id="footnote-29">
+                <sup>c26</sup> Ibid., 27.
+                <a href="#ref-28">↩</a>
+            </p>
+            <p class="footnote" id="footnote-30">
+                <sup>c27</sup> Ibid., 25. My emphasis.
+                <a href="#ref-30">↩</a>
+            </p>
+            <p class="footnote" id="footnote-31">
+                <sup>c28</sup> Ruhollah Khomeini, "New Year's Message," 277.
+                <a href="#ref-31">↩</a>
+            </p>
+            <p class="footnote" id="footnote-32">
+                <sup>c29</sup> Ibid., 279.
+                <a href="#ref-32">↩</a>
+            </p>
+            <p class="footnote" id="footnote-33">
+                <sup>c30</sup> Ibid., 275.
+                <a href="#ref-33">↩</a>
+            </p>
+            <p class="footnote" id="footnote-33">
+                <sup>c30</sup> Ibid., 275.
+                <a href="#ref-33">↩</a>
+            </p>
+            <p class="footnote" id="footnote-34">
+                <sup>c31</sup> Abrahamian, <i>The Iranian Mojahedin: Organization and Ideology,</i> 96.
+                <a href="#ref-34">↩</a>
+            </p>
+            <p class="footnote" id="footnote-35">
+                <sup>c32</sup> Ibid., 93.
+                <a href="#ref-35">↩</a>
+            </p>
+            <p class="footnote" id="footnote-36">
+                <sup>n4</sup> This is just conjecture, but it's interesting to think of why Marx’s conception of history might have translated well into an Islamic frame. The teleological arc of Marx’s history — which within his own system of thought, rationally follows from the simplification of class conflict throughout history — seems to have Christian roots, in that the Hegelian dialectic that he drew from certainly does. This idea of history as a culminating in some realization is one that is common across Abrahamic religions. It might have been for this reason that Islam’s existing terminology was apt to be reworked into a dialectical materialist understanding: both Western dialectical materialism and Islam, in some very derivative sense, were connected to this Abrahamic idea of history as being oriented towards its own end.
+                <a href="#ref-36">↩</a>
+            </p>
+            <p class="footnote" id="footnote-37">
+                <sup>c33</sup> Abrahamian, 93.
+                <a href="#ref-37">↩</a>
+            </p>
+            <p class="footnote" id="footnote-38">
+                <sup>c34</sup> Ibid., 96.
+                <a href="#ref-38">↩</a>
+            </p>
+            <p class="footnote" id="footnote-39">
+                <sup>c35</sup> <i>Cheguneh Quran Biamuzim</i> (How to Study the Koran) (Long Beach, Calif.: Muslim Student Association Press, 1980), as cited in Abrahamian, <i>The Iranian Mojahedin: Organization and Ideology</i>, 97.
+                <a href="#ref-39">↩</a>
+            </p>
+            <p class="footnote" id="footnote-40">
+                <sup>c36</sup> Ibid.
+                <a href="#ref-40">↩</a>
+            </p>
+            <p class="footnote" id="footnote-41">
+                <sup>c37</sup> Ibid. My emphasis.
+                <a href="#ref-41">↩</a>
+            </p>
+            <p class="footnote" id="footnote-42">
+                <sup>c38</sup> Abrahamian, 104. While the Mojahedin and Ali Shariati differed on some points — those being their beliefs on Marxism and how other underdeveloped nations should engage in anticolonial resistance (Abrahmian, 125) — none of these differences are relevant to my points here.
+                <a href="#ref-42">↩</a>
+            </p>
+            <p class="footnote" id="footnote-43">
+                <sup>c39</sup>  Ali Shariati, "Red Shi'ism: The Religion of Martyrdom; Black Shi'ism: The Religion of Mourning," accessed October 27, 2024, <a href="https://www.shariati.com/english/redblack.html.">https://www.shariati.com/english/redblack.html.</a> My emphasis.
+                <a href="#ref-43">↩</a>
+            </p>
+            <p class="footnote" id="footnote-44">
+                <sup>c40</sup> Ibid.
+                <a href="#ref-44">↩</a>
+            </p>
+            <p class="footnote" id="footnote-45">
+                <sup>c41</sup> Ruhollah Khomeini, “The Afternoon of 'Ashura, June 3, 1963,” 171.
+                <a href="#ref-45">↩</a>
+            </p>
+            <p class="footnote" id="footnote-46">
+                <sup>c42</sup> Ali Shariati, "Where Shall We Begin?" accessed October 27, 2024, <a href="https://www.shariati.com/english/begin/begin1.html.">https://www.shariati.com/english/begin/begin1.html.</a> My emphasis.
+                <a href="#ref-46">↩</a>
+            </p>
+            <p class="footnote" id="footnote-47">
+                <sup>c43</sup>  Alternatives: Global, Local, Political, SAGE Journals, accessed November 17, 2024, <a href="https://journals.sagepub.com/home/ALT.">https://journals.sagepub.com/home/ALT.</a>
+                <a href="#ref-47">↩</a>
+            </p>
+            <p class="footnote" id="footnote-48">
+                <sup>c44</sup> Richard Falk, "Interviews with Abol-Hassan Banisadr and Massoud Rajavi," <i>Alternatives</i> 8, no. 1 (1982): 103-104.
+                <a href="#ref-48">↩</a>
+            </p>
+            <p class="footnote" id="footnote-49">
+                <sup>c45</sup> Ibid., 102.
+                <a href="#ref-49">↩</a>
+            </p>
+            <p class="footnote" id="footnote-50">
+                <sup>c46</sup> <i>Ettela'at</i> (Tehran), August 23, 1979.
+                <a href="#ref-50">↩</a>
+            </p>
+            <p class="footnote" id="footnote-51">
+                <sup>n5</sup> But hopefully still fruitful!
+                <a href="#ref-51">↩</a>
+            </p>
+          </div>
