--- a/washington-heights-dining-table/mojahedin_khomeini/index.html
+++ b/washington-heights-dining-table/mojahedin_khomeini/index.html
@@ -138,8 +138,12 @@
               color: #AE3179;
           }
           .footnote {
-              font-size: 0.9em;
+              font-size: 18px;
+              line-height: 1.2;
+              margin-top: 4px;
+              margin-bottom: 4px;
           }
+
           .footnote a {
               text-decoration: none;
               color: #84D6DD;
@@ -161,7 +165,7 @@
       </div>
       <div class="essay">
           <p class="indent">
-            Few people could have foreseen the Iranian Revolution of 1979. The Pahlavi Monarchy, though unpopular, was nevertheless a decades-old institution that enjoyed the support of Britain and the United States, profited from billions of dollars in revenue from oil exports,<sup><a href="#footnote-1" id="ref-1">c1</a></sup> and (in the SAVAK) had a robust and infamously brutal security apparatus enforcing its hegemony. On January 7, 1978, the Shah closed the seminary and the bazaar of Qom, eliciting a protest on which the Shah’s security forces opened fire.<sup><a href="#footnote-2" id="ref-2">c2</a></sup> By February 11, 1979 — after 37 years of Shah Mohammad Reza Pahlavi’s rule and millenia of virtually interrupted monarchy — a 37-day old provisional government conceded to a new revolutionary authority. When such an unexpected event happens, a natural response is to make sense of it through explanation. In scholarship, this can lead to a certain type of knowledge production in which, as Charles Kurzman puts it, scholars “take unexpected events and try to make them less expected after the fact… a successful explanation leaves little to chance and free will; a less successful explanation leaves more.”<sup><a href="#footnote-3" id="ref-3">c3</a></sup> This lends itself to a reading of history that prioritizes structural explanations. While understanding the structural tendencies that animate a society is important, in times of great deinstitutionalization, it is hard to make the case that people’s behavior and its outcome can be understood in terms of existing structures:<sup><a href="#footnote-4" id="ref-4">4</a></sup> Understanding such moments in particular requires a prioritization of people’s agency in how they create and navigate this breach in normalcy.
+            Few people could have foreseen the Iranian Revolution of 1979. The Pahlavi Monarchy, though unpopular, was nevertheless a decades-old institution that enjoyed the support of Britain and the United States, profited from billions of dollars in revenue from oil exports,<sup><a href="#footnote-1" id="ref-1">c1</a></sup> and (in the SAVAK) had a robust and infamously brutal security apparatus enforcing its hegemony. On January 7, 1978, the Shah closed the seminary and the bazaar of Qom, eliciting a protest on which the Shah’s security forces opened fire.<sup><a href="#footnote-2" id="ref-2">c2</a></sup> By February 11, 1979 — after 37 years of Shah Mohammad Reza Pahlavi’s rule and millenia of virtually interrupted monarchy — a 37-day old provisional government conceded to a new revolutionary authority. When such an unexpected event happens, a natural response is to make sense of it through explanation. In scholarship, this can lead to a certain type of knowledge production in which, as Charles Kurzman puts it, scholars “take unexpected events and try to make them less expected after the fact… a successful explanation leaves little to chance and free will; a less successful explanation leaves more.”<sup><a href="#footnote-3" id="ref-3">c3</a></sup> This lends itself to a reading of history that prioritizes structural explanations. While understanding the structural tendencies that animate a society is important, in times of great deinstitutionalization, it is hard to make the case that people’s behavior and its outcome can be understood in terms of existing structures:<sup><a href="#footnote-4" id="ref-4">c4</a></sup> Understanding such moments in particular requires a prioritization of people’s agency in how they create and navigate this breach in normalcy.
           </p>
           <p class="indent">
             One of the main ways people do this is in how they articulate their political and philosophical platform. This is an especially important form of agency in a revolutionary period. When the limited frame of what was once normal political discourse gets scrapped, people have the opportunity to invent and mobilize new discourses to their ends. Here, discourse is not just the exchange of linguistic information, but rather a <i>system of thought</i> grounded in communication that informs one’s reading of the world.<sup><a href="#footnote-5" id="ref-5">c5</a></sup> It is a logic <i>in itself</i>. Taking agency by creating a new discourse, then, is taking agency by inventing a new logic.
@@ -330,7 +334,7 @@
                 <a href="#ref-5">↩</a>
             </p>
             <p class="footnote" id="footnote-6">
-                <sup>n1</sup> Hereafter, simply the Mojahedin.
+                <sup><b>n1</b></sup> Hereafter, simply the Mojahedin.
                 <a href="#ref-6">↩</a>
             </p>
             <p class="footnote" id="footnote-7">
@@ -354,7 +358,7 @@
                 <a href="#ref-11">↩</a>
             </p>
             <p class="footnote" id="footnote-12">
-                <sup>n2</sup> I don’t mean to imply a categorical rejection of explanation-based methodologies: the purpose of this paper is just to think outside of that structural frame and engage in a different type of knowledge production. While I look to stay grounded in the agency of people in this particular place and time, the kind of portrait that I hope to provide of these discourses could be synthesized with a structural approach that reads 1979 as a particular instance of revolution as a typology. Furet’s interpretation of revolution as a particular mode of historical action driven by discursive processes (<i>Interpreting the French Revolution</i> [Cambridge University Press, 1981]) is a perfect example of a more explanatory/structural approach that could be taken up in conversation with my work here.
+                <sup><b>n2</b></sup> I don’t mean to imply a categorical rejection of explanation-based methodologies: the purpose of this paper is just to think outside of that structural frame and engage in a different type of knowledge production. While I look to stay grounded in the agency of people in this particular place and time, the kind of portrait that I hope to provide of these discourses could be synthesized with a structural approach that reads 1979 as a particular instance of revolution as a typology. Furet’s interpretation of revolution as a particular mode of historical action driven by discursive processes (<i>Interpreting the French Revolution</i> [Cambridge University Press, 1981]) is a perfect example of a more explanatory/structural approach that could be taken up in conversation with my work here.
                 <a href="#ref-12">↩</a>
             </p>
             <p class="footnote" id="footnote-13">
@@ -402,7 +406,7 @@
                 <a href="#ref-23">↩</a>
             </p>
             <p class="footnote" id="footnote-24">
-                <sup>n3</sup> Khomeini doesn’t give particular examples of what this is, but associates it with mass media and the university system. See footnote below.
+                <sup><b>n3</b></sup> Khomeini doesn’t give particular examples of what this is, but associates it with mass media and the university system. See footnote below.
                 <a href="#ref-24">↩</a>
             </p>
             <p class="footnote" id="footnote-25">
@@ -454,7 +458,7 @@
                 <a href="#ref-35">↩</a>
             </p>
             <p class="footnote" id="footnote-36">
-                <sup>n4</sup> This is just conjecture, but it's interesting to think of why Marx’s conception of history might have translated well into an Islamic frame. The teleological arc of Marx’s history — which within his own system of thought, rationally follows from the simplification of class conflict throughout history — seems to have Christian roots, in that the Hegelian dialectic that he drew from certainly does. This idea of history as a culminating in some realization is one that is common across Abrahamic religions. It might have been for this reason that Islam’s existing terminology was apt to be reworked into a dialectical materialist understanding: both Western dialectical materialism and Islam, in some very derivative sense, were connected to this Abrahamic idea of history as being oriented towards its own end.
+                <sup><b>n4</b></sup> This is just conjecture, but it's interesting to think of why Marx’s conception of history might have translated well into an Islamic frame. The teleological arc of Marx’s history — which within his own system of thought, rationally follows from the simplification of class conflict throughout history — seems to have Christian roots, in that the Hegelian dialectic that he drew from certainly does. This idea of history as a culminating in some realization is one that is common across Abrahamic religions. It might have been for this reason that Islam’s existing terminology was apt to be reworked into a dialectical materialist understanding: both Western dialectical materialism and Islam, in some very derivative sense, were connected to this Abrahamic idea of history as being oriented towards its own end.
                 <a href="#ref-36">↩</a>
             </p>
             <p class="footnote" id="footnote-37">
@@ -514,7 +518,7 @@
                 <a href="#ref-50">↩</a>
             </p>
             <p class="footnote" id="footnote-51">
-                <sup>n5</sup> But hopefully still fruitful!
+                <sup><b>n5</b></sup> But hopefully still fruitful!
                 <a href="#ref-51">↩</a>
             </p>
           </div>
