--- a/washington-heights-dining-table/nature_pioneer/index.html
+++ b/washington-heights-dining-table/nature_pioneer/index.html
@@ -138,7 +138,7 @@
             color: #AE3179;
         }
         .footnote {
-            font-size: 0.9em;
+            font-size: 10px
         }
         .footnote a {
             text-decoration: none;
