--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -261,7 +261,7 @@
 
 <div class="caption" style="margin-bottom: 5px;">
     <h2>a second life. the flying keejay</h2>
-    <p>march 25 to april 13: this is very dear to me. there was something so magical about committing to (mainly) to one sort of texture and slowly, iteratively, bringing a life into being with that... only to all of a sudden tear it apart with that pink, flowing, arcane force that bursts from it. i like that this creature is made of two different sorts of substances, two logics, even, which seem at odds with each other. something about the feel of those coming together to form a whole is so magical to me; i think i want to commit to that sort of feeling elsewhere in my work. i picture the drawing as being life-sized, i think, even though people always feel like it's a rendering of something much bigger.</p>
+    <p>march 25 to april 13, 2025: this is very dear to me. there was something so magical about committing to (mainly) to one sort of texture and slowly, iteratively, bringing a life into being with that... only to all of a sudden tear it apart with that pink, flowing, arcane force that bursts from it. i like that this creature is made of two different sorts of substances, two logics, even, which seem at odds with each other. something about the feel of those coming together to form a whole is so magical to me; i think i want to commit to that sort of feeling elsewhere in my work. i picture the drawing as being life-sized, i think, even though people always feel like it's a rendering of something much bigger.</p>
 </div>
 <div class="video-embed">
     <iframe width="720" height="405" src="https://www.youtube.com/embed/caLkuL8kqC0?autoplay=1&loop=1&playlist=caLkuL8kqC0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
@@ -280,11 +280,33 @@
 
 <div class="caption" style="margin-bottom: 5px;">
     <h2>movement!</h2>
-    <p>late april 2024: i did a little character design with the intention of putting the dude in my little film, but looking at him, he just appeared so static -- it was hard to imagining him moving, dancing, living. so, i decided to give rendering human life *in motion* some practice. here are some sketches to that end. </p>
+    <p>late april 2025: i did a little character design with the intention of putting the dude in my little film, but looking at him, he just appeared so static -- it was hard to imagining him moving, dancing, living. so, i decided to give rendering human life *in motion* some practice. here are some sketches to that end. </p>
 </div>
 <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
   <img src="movement.png" alt="image loading: MOVEMENT">
 </div>
 
+<div class="caption" style="margin bottom: 15px;">
+  <h2>human life, in reverance</h2>
+  <p>may 15-july 9, 2025: my first crack at hand-drawn animation! it is jank but i love it. the first moving kovidian life is a man in prayer.</p>
+</div>
+<div class="video-embed">
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/kRQmnVDZioM?si=X_m7UwpBDGC8obbs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class="detail-images" style="--n: 1 margin-bottom: 20px;">
+  <img src="reverance_strips.png" alt="image loading: REVERANCE">
+</div>
+<div class="detail-images" style="--n: 1 margin-bottom: 20px;">
+  <img src="reverance_mechanics.png" alt="image loading: REVERANCE">
+</div>
+<div class="video-embed">
+  <iframe width="720" height="405" src="https://www.youtube.com/embed/aPCG5Gl7iJ4?autoplay=1&loop=1&playlist=aPCG5Gl7iJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+  <img src="reverance_strips_progress_1.png" alt="image loading: REVERANCE">
+</div>
+<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+  <img src="reverance_strips_progress_2.png" alt="image loading: REVERANCE">
+</div>
 </body>
 </html>
