--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -287,7 +287,7 @@
 </div>
 
 <div class="caption" style="margin bottom: 15px;">
-  <h2>human life, in reverance</h2>
+  <h2>human life, in reverence</h2>
   <p>may 15-july 9, 2025: my first crack at hand-drawn animation! it is jank but i love it. the first moving kovidian life is a man in prayer.</p>
 </div>
 <div class="video-embed">
