--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -294,19 +294,19 @@
     <iframe width="720" height="405" src="https://www.youtube.com/embed/kRQmnVDZioM?si=X_m7UwpBDGC8obbs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div class="detail-images" style="--n: 1 margin-bottom: 20px;">
-  <img src="reverance_strips.png" alt="image loading: REVERANCE">
+  <img src="reverence_strips.png" alt="image loading: REVERENCE">
 </div>
 <div class="detail-images" style="--n: 1 margin-bottom: 20px;">
-  <img src="reverance_mechanics.png" alt="image loading: REVERANCE">
+  <img src="reverence_mechanics.png" alt="image loading: REVERENCE">
 </div>
 <div class="video-embed">
   <iframe width="720" height="405" src="https://www.youtube.com/embed/aPCG5Gl7iJ4?autoplay=1&loop=1&playlist=aPCG5Gl7iJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="reverance_strips_progress_1.png" alt="image loading: REVERANCE">
+  <img src="reverence_strips_progress_1.png" alt="image loading: REVERENCE">
 </div>
 <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="reverance_strips_progress_2.png" alt="image loading: REVERANCE">
+  <img src="reverence_strips_progress_2.png" alt="image loading: REVERENCE">
 </div>
 </body>
 </html>
