--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -306,7 +306,7 @@
   <img src="reverence_strips_progress_1.png" alt="image loading: REVERENCE">
 </div>
 <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="reverence_strips_progress_2.png" alt="image loading: REVERENCE">
+  <img src="reverence_strips_progress_2.png" alt="image loading: TESTING">
 </div>
 </body>
 </html>
