--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -136,9 +136,6 @@
         <iframe width="720" height="405" src="https://www.youtube.com/embed/E17Wp6EmXGY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-
-
-
     <div class="caption" style="margin-bottom: 5px;">
         <h2>a first fish!</h2>
         <p>june 6 & 7, 2024: quick little practice drawing the biological, couldn't help but throw in some asemic writing. drew this one out on the stoop chillin with chase & my new neighbors. (it's a tuna.) micron, micron, and micron.</p>
@@ -241,72 +238,80 @@
       <img src="a_first_life3.png" alt="image loading: LIFE">
     </div>
 
-<div class="caption" style="margin-bottom: 15px;">
-    <h2>archive 3</h2>
-    <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://youtu.be/xNhOYPgvyiI?si=w9zK7o3-8yYC5sgv" class="link-element">LINK</a></p>
-</div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>archive 3</h2>
+        <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://youtu.be/xNhOYPgvyiI?si=w9zK7o3-8yYC5sgv" class="link-element">LINK</a></p>
+    </div>
 
-<div class="video-embed">
-    <iframe width="720" height="405" src="https://www.youtube.com/embed/xNhOYPgvyiI?si=O2ywpOLHs2SJ_u0L" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+    <div class="video-embed">
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/xNhOYPgvyiI?si=O2ywpOLHs2SJ_u0L" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
-<div class="caption" style="margin-bottom: 15px;">
-    <h2>archive 3 & 1/2</h2>
-    <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw" class="link-element">LINK</a></p>
-</div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>archive 3 & 1/2</h2>
+        <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw" class="link-element">LINK</a></p>
+    </div>
 
-<div class="video-embed">
-    <iframe width="720" height="405" src="https://www.youtube.com/embed/OD_MIL46UCw?si=t6-PYPOPEHvM4tdD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+    <div class="video-embed">
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/OD_MIL46UCw?si=t6-PYPOPEHvM4tdD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
-<div class="caption" style="margin-bottom: 5px;">
-    <h2>a second life. the flying keejay</h2>
-    <p>march 25 to april 13, 2025: this is very dear to me. there was something so magical about committing to (mainly) to one sort of texture and slowly, iteratively, bringing a life into being with that... only to all of a sudden tear it apart with that pink, flowing, arcane force that bursts from it. i like that this creature is made of two different sorts of substances, two logics, even, which seem at odds with each other. something about the feel of those coming together to form a whole is so magical to me; i think i want to commit to that sort of feeling elsewhere in my work. i picture the drawing as being life-sized, i think, even though people always feel like it's a rendering of something much bigger.</p>
-</div>
-<div class="video-embed">
-    <iframe width="720" height="405" src="https://www.youtube.com/embed/caLkuL8kqC0?autoplay=1&loop=1&playlist=caLkuL8kqC0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
-</div>
-<div class="detail-images" style="--n: 3; margin-bottom: 20px;">
-  <img src="a_second_life5.png" alt="image loading: LIFE">
-  <img src="a_second_life3.png" alt="image loading: LIFE">
-  <img src="a_second_life4.png" alt="image loading: LIFE">
-</div>
-<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="a_second_life2.png" alt="image loading: LIFE">
-</div>
-<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="a_second_life6.png" alt="image loading: LIFE">
-</div>
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>a second life. the flying keejay</h2>
+        <p>march 25 to april 13, 2025: this is very dear to me. there was something so magical about committing to (mainly) to one sort of texture and slowly, iteratively, bringing a life into being with that... only to all of a sudden tear it apart with that pink, flowing, arcane force that bursts from it. i like that this creature is made of two different sorts of substances, two logics, even, which seem at odds with each other. something about the feel of those coming together to form a whole is so magical to me; i think i want to commit to that sort of feeling elsewhere in my work. i picture the drawing as being life-sized, i think, even though people always feel like it's a rendering of something much bigger.</p>
+    </div>
+    <div class="video-embed">
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/caLkuL8kqC0?autoplay=1&loop=1&playlist=caLkuL8kqC0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
+    </div>
+    <div class="detail-images" style="--n: 3; margin-bottom: 20px;">
+      <img src="a_second_life5.png" alt="image loading: LIFE">
+      <img src="a_second_life3.png" alt="image loading: LIFE">
+      <img src="a_second_life4.png" alt="image loading: LIFE">
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+      <img src="a_second_life2.png" alt="image loading: LIFE">
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+      <img src="a_second_life6.png" alt="image loading: LIFE">
+    </div>
 
-<div class="caption" style="margin-bottom: 5px;">
-    <h2>movement!</h2>
-    <p>late april 2025: i did a little character design with the intention of putting the dude in my little film, but looking at him, he just appeared so static -- it was hard to imagining him moving, dancing, living. so, i decided to give rendering human life *in motion* some practice. here are some sketches to that end. </p>
-</div>
-<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="movement.png" alt="image loading: MOVEMENT">
-</div>
+    <div class="caption" style="margin-bottom: 5px;">
+        <h2>movement!</h2>
+        <p>late april 2025: i did a little character design with the intention of putting the dude in my little film, but looking at him, he just appeared so static -- it was hard to imagining him moving, dancing, living. so, i decided to give rendering human life *in motion* some practice. here are some sketches to that end. </p>
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+      <img src="movement.png" alt="image loading: MOVEMENT">
+    </div>
 
-<div class="caption" style="margin bottom: 15px;">
-  <h2>human life, in reverence</h2>
-  <p>may 15-july 9, 2025: my first crack at hand-drawn animation! it is jank but i love it. the first moving kovidian life is a man in prayer.</p>
-</div>
-<div class="video-embed">
-    <iframe width="720" height="405" src="https://www.youtube.com/embed/kRQmnVDZioM?si=X_m7UwpBDGC8obbs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="detail-images" style="--n: 1 margin-bottom: 20px;">
-  <img src="reverence_strips.png" alt="image loading: REVERENCE">
-</div>
-<div class="detail-images" style="--n: 1 margin-bottom: 20px;">
-  <img src="reverence_mechanics.png" alt="image loading: REVERENCE">
-</div>
-<div class="video-embed">
-  <iframe width="720" height="405" src="https://www.youtube.com/embed/aPCG5Gl7iJ4?autoplay=1&loop=1&playlist=aPCG5Gl7iJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="reverence_strips_progress_1.png" alt="image loading: REVERENCE">
-</div>
-<div class="detail-images" style="--n: 1; margin-bottom: 20px;">
-  <img src="reverence_strips_progress_2.png" alt="image loading: TESTING">
-</div>
+    <div class="caption" style="margin bottom: 15px;">
+      <h2>human life, in reverence</h2>
+      <p>may 15-july 9, 2025: my first crack at hand-drawn animation! it is jank but i love it. the first moving kovidian life is a man in prayer.</p>
+    </div>
+    <div class="video-embed">
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/kRQmnVDZioM?si=X_m7UwpBDGC8obbs" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="detail-images" style="--n: 1 margin-bottom: 20px;">
+      <img src="reverence_strips.png" alt="image loading: REVERENCE">
+    </div>
+    <div class="detail-images" style="--n: 1 margin-bottom: 20px;">
+      <img src="reverence_mechanics.png" alt="image loading: REVERENCE">
+    </div>
+    <div class="video-embed">
+      <iframe width="720" height="405" src="https://www.youtube.com/embed/aPCG5Gl7iJ4?autoplay=1&loop=1&playlist=aPCG5Gl7iJ4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+      <img src="reverence_strips_progress_1.png" alt="image loading: REVERENCE">
+    </div>
+    <div class="detail-images" style="--n: 1; margin-bottom: 20px;">
+      <img src="reverence_strips_progress_2.png" alt="image loading: REVERENCE">
+    </div>
+
+    <div class="video-embed">
+        <iframe width="720" height="405" src="https://youtu.be/xY9ZsXCFK48?si=k67xFTcZcro9gGbY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
+    </div>
+    <div class="caption" style="margin-bottom: 15px;">
+        <h2>archive 4</h2>
+        <p>talking about where i'm at with my creative practice after a long hiatus. i've been doing worldbuilding stuff in two settings. here i talk about my inspiration for the first. for that project i'm developing myths from two cultures, one descended from the other. <a href="https://www.youtube.com/watch?v=xY9ZsXCFK48" class="link-element">LINK</a></p>
+    </div>
 </body>
 </html>
