south asian lit

--- a/washington-heights-dining-table/index.html
+++ b/washington-heights-dining-table/index.html
@@ -186,7 +186,7 @@
       <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/5" class="link-element">Premchand translated into film: Satyajit Ray’s opening scene & prose over ghazal</a> (for february 12, 2025)</p>
       <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/6" class="link-element">Evolving thoughts on Satyajit Ray’s ending after seminar</a> (on february 12, 2025)</p>
       <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/7" class="link-element">Premchand’s Village</a> (for february 19, 2025)</p>
-      <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/8" class="link-element">More trouble with Premchand’s Rural subjectivities after seminar</a> (on february 19, 2025)</p>
+      <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/8" class="link-element">More trouble with Premchand’s Rural subjectivities</a> (on february 19, 2025)</p>
       <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/9" class="link-element">Yashpal against asceticism and nature’s <u>consummation</u></a> (for february 26, 2025)</p>
       <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/10" class="link-element">Yashpal's women and his goal as a social critic</a> (on february 26, 2025)</p>
       <p><a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/south_asian_lit/11" class="link-element">Sadaat Hasan Manto: Formal invention in response to the trauma of Partition</a> (for march 5, 2025)</p>
