--- a/washington-heights-dining-table/south_asian_lit/9/index.html
+++ b/washington-heights-dining-table/south_asian_lit/9/index.html
@@ -161,6 +161,7 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
+        <p style="margin-bottom: 20px;"> <i>This is about Yashpal's short stories "Enlightenment" and "The Mire of Sin." At this point in the class, these had been my favorite readings. I would highly recommend them. Both Yashpal and Premchand have a really nice range of expression with their prose, but at least in the texts I encountered, Yashpal doesn't run into the issue of reproducing the systems he critiques. Both are still some of my favorite realist authors I've encountered in any geography.</i></p>
         <h1>Yashpal against asceticism and nature’s <i>consummation</i></h1>
       </div>
       <div class="essay">
