--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             Image: (the day before the) biye!
         </div>
         <div class="lil-message-text">
-            glory to the crickets!!
+            ARCHIVE SOMETHING!
         </div>
     </div>
     <div class="link-container" style="margin-top:10px">
