--- a/index.html
+++ b/index.html
@@ -60,165 +60,77 @@
         }
         .additional-text {
             position: absolute;
-            top: 22%; /* Adjust this value for vertical positioning */
-            left: 73%; /* Adjust this value for horizontal positioning */
-            color: #fae828; /* Text color */
+            top: 22%;
+            left: 73%;
+            color: #fae828;
             font-family: 'Pixelon', sans-serif;
             font-size: 18px;
             line-height: 20px;
-            max-width: 25%; /* Limit of how far it goes before wrapping */
-            text-shadow: 2px 2px #bd7306; /* Apply text shadow with desired color */
-            background-color: #99552a; /* Highlight */
-            padding: 5px; /* Add padding to make the highlight visible */
+            max-width: 25%;
+            text-shadow: 2px 2px #bd7306;
+            background-color: #99552a;
+            padding: 5px;
         }
         .imagecaption {
             position: absolute;
             left: 1%;
-            bottom: 1%; /* Adjust this value for vertical positioning */
+            bottom: 1%;
             color: #ffffff;
             font-family: 'Pixelon', sans-serif;
             font-size: 14px;
-            background-color: #a7c26d; /* Highlight */
-            padding: 5px; /* Add padding to make the highlight visible */
+            background-color: #a7c26d;
+            padding: 5px;
         }
         .lil-message-text {
             position: absolute;
-            right: 0.5%; /* Adjust this value for horizontal positioning */
-            bottom: 6%; /* Adjust this value for vertical positioning */
+            right: 0.5%;
+            bottom: 6%;
             color: #ffffff;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
             font-size: 12px;
             transform: rotate(-35deg);
             animation: lilTextResize 2s infinite;
-        }
-        .link-container {
-            margin-top: 10px;
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-        .link-element {
+            .link-container {
+                margin-top: 10px;
+                margin-bottom: 10px;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+            }
+
+        }.link {
             position: relative;
-            display: inline-block;
+            display: flex;
+            flex-direction: column;
             font-family: 'Pixelon', sans-serif;
             font-size: 20px;
-            color: #543D0D;
-            text-shadow: 2px 2px #D0B884;
-            padding: 8px; /* Add padding for background */
-            background-color: #F2EAD3;
-            text-decoration: none; /* Remove underline from text */
+            padding: 8px;
+            text-decoration: none;
+
+            /* variables */
+            color: var(--text);
+            text-shadow: 2px 2px var(--shadow);
+            background-color: var(--bg);
         }
-        .link-element:hover {
-            text-decoration: underline; /* Add underline on hover */
+
+        .link:hover {
+            text-decoration: underline;
         }
-        .link-element::after {
+
+        .link::after {
             content: '';
             position: absolute;
             top: 3px;
             left: 3px;
-            background-color: #D0B884;
-            width: 100%; /* Adjust width to cover full element */
-            height: 100%; /* Adjust height to cover full element */
-            z-index: -1;
-            box-shadow: 3px 3px #543D0D;
-        }
-        .link2-container {
-            margin-top: 10px;
-            margin-bottom: 10px;/* Margin to position the link slightly below the image */
-            display: flex;
-            justify-content: center;
             width: 100%;
-        }
-        .link2-element {
-            position: relative;
-            display: inline-block;
-            font-family: 'Pixelon', sans-serif;
-            font-size: 20px;
-            color: #AE3179;
-            text-shadow: 2px 2px #D5A454;
-            padding: 8px; /* Add padding for background */
-            background-color: #EDD2E3;
-            text-decoration: none; /* Remove underline from text */
-        }
-        .link2-element:hover {
-            text-decoration: underline; /* Add underline on hover */
-        }
-        .link2-element::after {
-            content: '';
-            position: absolute;
-            top: 3px;
-            left: 3px;
-            background-color: #84D6DD;
-            width: 100%; /* Adjust width to cover full element */
-            height: 100%; /* Adjust height to cover full element */
+            height: 100%;
             z-index: -1;
-            box-shadow: 3px 3px #D5A454;
+
+            background-color: var(--after-bg);
+            box-shadow: 3px 3px var(--after-shadow);
         }
-        .link3-container {
-            margin-top: 10px; /* Margin to position the link slightly below the image */
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-        .link3-element {
-            position: relative;
-            display: inline-block;
-            font-family: 'Pixelon', sans-serif;
-            font-size: 20px;
-            color: #CA9849;
-            text-shadow: 2px 2px #B07643;
-            padding: 8px; /* Add padding for background */
-            background-color: #104547;
-            text-decoration: none; /* Remove underline from text */
-        }
-        .link3-element:hover {
-            text-decoration: underline; /* Add underline on hover */
-        }
-        .link3-element::after {
-            content: '';
-            position: absolute;
-            top: 3px;
-            left: 3px;
-            background-color: #AB2068;
-            width: 100%; /* Adjust width to cover full element */
-            height: 100%; /* Adjust height to cover full element */
-            z-index: -1;
-            box-shadow: 3px 3px #dad4ed;
-        }
-        .link4-container {
-            margin-top: 10px;
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
-        .link4-element {
-            position: relative;
-            display: inline-block;
-            font-family: 'Pixelon', sans-serif;
-            font-size: 20px;
-            color: #AE3179;
-            text-shadow: 2px 2px #D5A454;
-            padding: 8px; /* Add padding for background */
-            background-color: #EDD2E3;
-            text-decoration: none; /* Remove underline from text */
-        }
-        .link4-element:hover {
-            text-decoration: underline; /* Add underline on hover */
-        }
-        .link4-element::after {
-            content: '';
-            position: absolute;
-            top: 3px;
-            left: 3px;
-            background-color: #d5a454;
-            width: 100%; /* Adjust width to cover full element */
-            height: 100%; /* Adjust height to cover full element */
-            z-index: -1;
-            box-shadow: 3px 3px #531639;
+
       }
         @keyframes textResize {
             0%, 100% {
@@ -255,23 +167,43 @@
             ARCHIVE SOMETHING!
         </div>
     </div>
-    <div class="link-container" style="margin-top:10px">
-        <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link-element" target="_blank">
+    <div class="link-container" style="margin-top:15px">
+        <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link" style="
+        --text: #543D0D;
+        --shadow: #D0B884;
+        --bg: #F2EAD3;
+        --after-bg: #D0B884;
+        --after-shadow: #543D0D;">
             art from mamaroneck ~2023
         </a>
     </div>
-    <div class="link2-container">
-        <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link2-element" target="_blank">
+    <div class="link2-container" style="margin-top:15px">
+        <a href="https://kovid-pal-odouard.github.io/thevillage-2024/" class="link" style="
+        --text: #AE3179;
+        --shadow: #D5A454;
+        --bg: #EDD2E3;
+        --after-bg: #84D6DD;
+        --after-shadow: #D5A454;">
             stuff from the village ~2024
         </a>
     </div>
-    <div class="link3-container" style="margin-top:10px">
-        <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link3-element" target="_blank">
+    <div class="link3-container" style="margin-top:15px">
+        <a href="https://kovid-pal-odouard.github.io/weeksville-2024/" class="link" style="
+        --text: #CA9849;
+        --shadow: #B07643;
+        --bg: #104547;
+        --after-bg: #AB2068;
+        --after-shadow: #DAD4ED;">
             FROM FISH TO POSTCOLONIALITY.
         </a>
     </div>
-    <div class="link4-container" style="margin-top:10px; margin-bottom:30px">
-        <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link4-element" target="_blank">
+    <div class="link4-container" style="margin-top:15px; margin-bottom:30px">
+        <a href="https://kovid-pal-odouard.github.io/washington-heights-dining-table/" class="link" style="
+        --text: #AE3179;
+        --shadow: #D5A454;
+        --bg: #EDD2E3;
+        --after-bg: #D5A454;
+        --after-shadow: #531639;">
             stuff from the wash heights dining table: 2024-2025
         </a>
     </div>
