--- a/washington-heights-dining-table/mojahedin_khomeini/index.html
+++ b/washington-heights-dining-table/mojahedin_khomeini/index.html
@@ -157,7 +157,7 @@
   </head>
   <body>
       <div class="heading-text">
-          <h1>at a dining table: fall 2024 & spring 2025</h1>
+          <h1>at a dining table: 2024-2026</h1>
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
