--- a/thevillage-2024/index.html
+++ b/thevillage-2024/index.html
@@ -109,11 +109,12 @@
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
-
+    <div class="caption" style="margin-bottom: 15px;">
+        <p>January 2026 Kovid here. Right after it ended, this is how it felt right to self-archive my the thinking and creating i did in my first year of undergrad. Un-edited and arranged in a continuum. Things have changed a little since then, so I wanted to come back here to note that.</p>
+    </div>
     <div class="caption" style="margin-bottom: 15px;">
         <p>these are sorted roughly from least to most academic. they're all pretty academic, lol.</p>
     </div>
-
 
     <div class="caption" style="margin-bottom: 15px;">
         <h2>collage of the man and the mushroom forest</h2>
