--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -238,21 +238,20 @@
       <img src="a_first_life3.png" alt="image loading: LIFE">
     </div>
 
-    <div class="caption" style="margin-bottom: 15px;">
+    <div class="caption" style="margin-bottom: 5px;">
         <h2>archive 3</h2>
         <p>reflections on + out of that^^ very rambling because i just hit record with 0 notes. <a href="https://youtu.be/xNhOYPgvyiI?si=w9zK7o3-8yYC5sgv" class="link-element">LINK</a></p>
     </div>
 
-    <div class="video-embed">
+    <div class="video-embed" style="margin-bottom: 15px;">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/xNhOYPgvyiI?si=O2ywpOLHs2SJ_u0L" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <div class="caption" style="margin-bottom: 15px;">
+    <div class="caption" style="margin-bottom: 5px;">
         <h2>archive 3 & 1/2</h2>
         <p>a little addition to what i said last night <a href="https://www.youtube.com/watch?v=OD_MIL46UCw" class="link-element">LINK</a></p>
     </div>
-
-    <div class="video-embed">
+    <div class="video-embed" style="margin-bottom: 15px;">
         <iframe width="720" height="405" src="https://www.youtube.com/embed/OD_MIL46UCw?si=t6-PYPOPEHvM4tdD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
@@ -283,7 +282,7 @@
       <img src="movement.png" alt="image loading: MOVEMENT">
     </div>
 
-    <div class="caption" style="margin bottom: 15px;">
+    <div class="caption" style="margin bottom: 5px;">
       <h2>human life, in reverence</h2>
       <p>may 15-july 9, 2025: my first crack at hand-drawn animation! it is jank but i love it. the first moving kovidian life is a man in prayer.</p>
     </div>
@@ -306,12 +305,12 @@
       <img src="reverence_strips_progress_2.png" alt="image loading: REVERENCE">
     </div>
 
-    <div class="video-embed">
-        <iframe width="720" height="405" src="https://youtu.be/xY9ZsXCFK48?si=k67xFTcZcro9gGbY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
-    </div>
-    <div class="caption" style="margin-bottom: 100px;">
+    <div class="caption" style="margin-bottom: 15px;">
         <h2>archive 4</h2>
         <p>talking about where i'm at with my creative practice after a long hiatus. i've been doing worldbuilding stuff in two settings. here i talk about my inspiration for the first. for that project i'm developing myths from two cultures, one descended from the other. <a href="https://www.youtube.com/watch?v=xY9ZsXCFK48" class="link-element">LINK</a></p>
+    </div>
+    <div class="video-embed" style="margin-bottom: 100px">
+        <iframe width="720" height="405" src="https://youtu.be/xY9ZsXCFK48?si=k67xFTcZcro9gGbY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
     </div>
 </body>
 </html>
