--- a/weeksville-2024/index.html
+++ b/weeksville-2024/index.html
@@ -310,7 +310,7 @@
         <p>talking about where i'm at with my creative practice after a long hiatus. i've been doing worldbuilding stuff in two settings. here i talk about my inspiration for the first. for that project i'm developing myths from two cultures, one descended from the other. <a href="https://www.youtube.com/watch?v=xY9ZsXCFK48" class="link-element">LINK</a></p>
     </div>
     <div class="video-embed" style="margin-bottom: 100px">
-        <iframe width="720" height="405" src="https://youtu.be/xY9ZsXCFK48?si=k67xFTcZcro9gGbY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/xY9ZsXCFK48?si=_GNqwrjzOlt8Z9vN frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop=1" allowfullscreen></iframe>
     </div>
 </body>
 </html>
